<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <com.google.android.material.card.MaterialCardView xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardBackgroundColor="#D3E4FF"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D3E4FF"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/titleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                android:text="@string/settings"
                android:textColor="#4169E1"
                android:textSize="28sp"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/muteSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/mute_unmute"
                android:textSize="18sp"
                android:thumbTint="#4169E1"
                android:trackTint="#B0C4DE"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/select_voice"
                android:textColor="#4169E1"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/voiceSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:backgroundTint="#B0C4DE"
                android:popupBackground="#FFFFFF" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/volume"
                android:textColor="#4169E1"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/volumeSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:progressTint="#4169E1"
                android:thumbTint="#4169E1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:text="@string/select_language"
                android:textColor="#4169E1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/greekButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:adjustViewBounds="true"
                    android:backgroundTint="#4169E1"
                    android:elevation="4dp"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/greece" />

                <ImageButton
                    android:id="@+id/englishButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:adjustViewBounds="true"
                    android:backgroundTint="#4169E1"
                    android:elevation="4dp"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/english" />

                <ImageButton
                    android:id="@+id/frenchButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:adjustViewBounds="true"
                    android:backgroundTint="#4169E1"
                    android:elevation="4dp"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/france" />

            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</ScrollView>
